--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
+    "babel": "^4.7.16",
     "chalk": "^1.0.0",
     "cline": "^0.8.2",
     "coffee-script": "1.6.3",
